# bg

./: .editorconfig  .gitattributes  .gitignore  Backgammon_Project_Session_Summary.docx  CMakeLists.txt  PROJECT_STATUS.md  README.md  board.cpp  board.hpp  boardrenderer.cpp  boardrenderer.hpp  ncurses_renderer.cpp  ncurses_renderer.cpp..minchange  ncurses_renderer.hpp  tui.cpp
client-tui/: CMakeLists.txt  main.cc  temp.out
proto/admin/v1/: admin.proto
proto/bg/v1/: bg.proto
server/: CMakeLists.txt  admin_server_main.cpp  auth.cpp  auth.hpp  logger.cpp  logger.hpp  main.cc  match.cpp  match.hpp  rpc_auth_match.cpp  rpc_auth_match.hpp  smoke_main.cpp
server/proto/bg/v1/: bg.proto
